# framework3plus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  README.md  generate_templates.js  package-lock.json  package.json  test.js  vercel.json
.github/workflows/: build-tauri.yml  deploy.yml
api/: ai-proxy.js
docs/: ADLC-FRAMEWORK.md  SDLC-FRAMEWORK.md
public/: index.html
public/templates/: aichatbot.json  dashboard.json  desktoptool.json  ecommerce.json  mobileapp.json
scripts/: generate_templates.js
src/: tech-database.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
test-vite/: package-lock.json  package.json
