[package]
name = "devforge-studio"
version = "1.0.0"
description = "Native AI IDE powered by DevForge"
authors = ["DevForge Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
panic = "abort" # Strip expensive panic info
codegen-units = 1 # Optimization for binary size
lto = true # Link Time Optimization
opt-level = "s" # Optimize for size
strip = true # Strip symbols from binary
